cmake_minimum_required(VERSION 3.1.0)
project(converter)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(converter main.cpp)
set(THREADS_PREFER_PTHREAD_FLAG ON)
target_link_libraries(converter ${OpenCV_LIBS})
target_link_libraries (converter ${CMAKE_THREAD_LIBS_INIT})
set(CMAKE_CXX_STANDARD 11)